# CrossStitchPatterns

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
alembic/: env.py
alembic/versions/: 4d14890bf062_create_projects_and_pattern_results_.py  b7e3f1a2c4d5_add_source_image_dimensions_to_projects.py  c1e2f3a4b5d6_add_processing_mode_and_variant_to_pattern_results.py  d2f3a4b5c6e7_add_aida_count_and_margin_cm_to_pattern_results.py
app/: config.py  main.py
app/domain/: exceptions.py
app/infrastructure/: logging.py
app/web/: routes.py  validators.py
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
docs/: AI_ASSISTED_DEVELOPMENT.md  ARCHITECTURE_AND_MVP_PLAN.md  TFM_ASSESSMENT.md  deployment.md  manual_testing_guide.md  postgres_testing.md  reviewer_guide.md
docs/architecture/: clean_architecture.md
docs/features/: 001_Image_to_CrossStitch_Pattern_Conversion.md  002_PDF_Export_Overview_Page.md  003_Legend_Page.md  004_Pattern_Grid_Pages.md  005_Pattern_Improvement.md  006_Persistence_layer.md  007_Postgres_SQL_Integration_Tests.md  008_Integrate_File_Storage_Project_Workflow.md  009_Basic_Frontend.md
scripts/: check_actual_colors.py  generate_pattern_from_image.py  regenerate_demo_projects.py
tests/helpers/: in_memory_repositories.py  pattern_fixtures.py
tests/integration/: conftest.py  test_complete_pattern_workflow.py  test_database_operations.py  test_exception_handler.py  test_fabric_api.py  (+8 more)
(+97 files in other folders)
