[project]
name = "crossstitchpattern"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["postgres: tests that require a running PostgreSQL instance"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100